Correct the navigation list gap and the form width

--- a/assets/css/contactform/contactform-input.css
+++ b/assets/css/contactform/contactform-input.css
@@ -2,17 +2,17 @@
   background-color: #fff;
   border-radius: 5px;
   border: none;
-  width: 100%;
-  padding: 1.5rem;
   color: var(--text-color);
   font-family: var(--text-font);
-  resize: none;
   outline: none;
+  padding: 1.5rem;
+  resize: none;
+  width: calc(100% - 3rem);
 }
 
 .contactform__input:focus + .contactform__label,
 .contactform__input:valid + .contactform__label {
-  top: 0rem;
   font-size: 0.75rem;
+  top: 0rem;
   transition: all 0.5s;
 }
