--- a/assets/css/contactform/contactform-label.css
+++ b/assets/css/contactform/contactform-label.css
@@ -8,5 +8,5 @@
   position: absolute;
   top: 1rem;
   transition: all 0.5s;
-  width: 100%;
+  width: calc(100% - 3rem);
 }
