--- a/assets/css/navlist/navlist.css
+++ b/assets/css/navlist/navlist.css
@@ -3,5 +3,7 @@
 .navlist {
   display: flex;
   flex-flow: column nowrap;
-  gap: 1.5rem;
+  gap: 2.2rem;
+  padding: 0;
+
 }
